Changelog
=========

0.5 (unreleased)
----------------

- Adjust garbage can view template so that it doesn't break when an object doesn't
  have the title, description, or portal_type attributes.

- Remove acquisition context before adding restored item to container.